[gd_scene load_steps=10 format=3 uid="uid://cco6yvch0b6h6"]

[ext_resource type="Script" path="res://Scenes/Menu/main_menu.gd" id="1_3htgi"]
[ext_resource type="FontFile" uid="uid://cywvmrrjs6omw" path="res://Assets/Fonts/kenvector_future.ttf" id="2_k5k7n"]
[ext_resource type="FontFile" uid="uid://cvxst13mrkt7b" path="res://Assets/Fonts/kenpixel_future_square.ttf" id="3_lhmpw"]
[ext_resource type="Texture2D" uid="uid://pgp00s8jd775" path="res://Assets/MenuResources/superbaldman.jpeg" id="4_r6ot7"]

[sub_resource type="LabelSettings" id="LabelSettings_3no7f"]
font = ExtResource("2_k5k7n")
font_size = 55
shadow_color = Color(0.24, 0.24, 0.24, 0.733333)
shadow_offset = Vector2(6, 4)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_06aky"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(290.06, 1, 1)
gravity = Vector3(0, 98, 0)

[sub_resource type="Animation" id="Animation_wpb8a"]
resource_name = "title_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5, 0.6, 0.733333, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(280, 88), Vector2(462.5, 88), Vector2(180, 88), Vector2(380, 88), Vector2(254.5, 88), Vector2(366.5, 88), Vector2(334.5, 88), Vector2(281, 88)]
}

[sub_resource type="Animation" id="Animation_fe0i5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(334.5, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ifnvk"]
_data = {
"RESET": SubResource("Animation_fe0i5"),
"title_anim": SubResource("Animation_wpb8a")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3htgi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 348.0
offset_bottom = 632.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_r6ot7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -295.0
offset_top = 88.0
offset_right = 295.0
offset_bottom = 151.0
grow_horizontal = 2
text = "Super Bald Man"
label_settings = SubResource("LabelSettings_3no7f")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Label"]
position = Vector2(284, 48)
amount = 200
process_material = SubResource("ParticleProcessMaterial_06aky")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ifnvk")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.233
anchor_top = 0.346
anchor_right = 0.767
anchor_bottom = 0.654
offset_left = -0.416016
offset_top = -0.208008
offset_right = 0.415955
offset_bottom = 0.207977
grow_horizontal = 2
grow_vertical = 2
focus_previous = NodePath("StartGameButton")

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_lhmpw")
text = "START GAME"

[node name="TestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_lhmpw")
text = "TEST CHARACTERS"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_lhmpw")
text = "CREDITS"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_lhmpw")
text = "CONTINUE"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TestButton" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
